add change password function; fix missing cancelButton text; add css for settings page

--- a/www/css/evnotify.css
+++ b/www/css/evnotify.css
@@ -5,3 +5,20 @@
     position: relative;
     margin-top: 5%;
 }
+.settingsSection {
+    font-size: 1.5em;
+    margin-left: 5%;
+}
+.settingsPart {
+    width: 90%;
+    margin-left: 5%;
+}
+.pwBtn {
+    position: absolute;
+    right: 0;
+    margin-right: 5%;
+}
+.marginLeft {
+    margin-left: 5%;
+    width: 90%;
+}
