android 4.1 support; move settings code to own js file - fixes for android 4.1 (design fixes and calculation fixes -> polyfill for TextDecoder - move code for settings handling to settings.js

--- a/www/css/evnotify.css
+++ b/www/css/evnotify.css
@@ -26,3 +26,12 @@
     position: absolute;
     right: 10%;
 }
+/* Android 4.1 Fixes */
+header.mdl-layout__header.is-casting-shadow,
+.mdl-snackbar.mdl-js-snackbar,
+.mdl-navigation {
+    display: block;
+}
+.mdl-snackbar.mdl-js-snackbar.mdl-snackbar--active {
+    position: absolute;
+}
