implement station details page with all its handling; optimize and fix stations list - add icons - add navigator plugin which allows direct navigation - enhance translation - first implementation of station details page - stations list page optimizing

--- a/www/css/evnotify.css
+++ b/www/css/evnotify.css
@@ -42,6 +42,10 @@
 .mdl-list__item-avatar.material-icons.fault {
     background-color: #ff3a3a;
 }
+.mdl-list__item--three-line {
+    height: auto;
+    box-sizing: unset;
+}
 .mdl-list__item--three-line .mdl-list__item-primary-content {
     height: auto;
 }
