fix new socCycle for Android 4; fix consumption value on saveSettings - update to v.1.2.1:01

--- a/www/css/evnotify.css
+++ b/www/css/evnotify.css
@@ -6,9 +6,7 @@ svg#socSVG path {
 }
 #socCycleDiv {
     position: relative;
-    display: grid;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
     margin-top: 1%;
 }
 #socCycle {
