complete restructuring; v2 first preparation; vueJS integration

--- a/www/css/evnotify.css
+++ b/www/css/evnotify.css
@@ -1,149 +1,13 @@
-.page-content {
-    width: 100%;
-}
-svg#socSVG {
-    position: relative;
-}
-svg#socSVG path {
-    will-change: auto;
-    stroke-width: 20px;
-    stroke-miterlimit: round;
-    transition: stroke-dashoffset 850ms ease-in-out;
-}
-#socCycleDiv {
-    position: relative;
-    text-align: center;
-    margin-top: 1%;
-    width: 100%;
-}
-#socCycle {
-    position: absolute;
-    top: 80px;
-    left: 48%;
-    color: #111;
-    font-family: 'Helvetica Neue', sans-serif;
-    font-size: 2em;
-    font-weight: bold;
-    letter-spacing: -1px;
-    line-height: 1;
-    text-align: center;
-}
-.settingsSection {
-    font-size: 1.5em;
-    margin-left: 5%;
-}
-.settingsPart {
-    width: 90%;
-    margin-left: 5%;
-}
-.pwBtn {
-    position: absolute;
+.loading-overlay {
+    z-index: 10;
+    top: 0;
+    left: 0;
     right: 0;
-    margin-right: 5%;
-}
-.marginLeft {
-    margin-left: 5%;
-    width: 90%;
-}
-.station-connectors {
-    float: right;
-    font-size: 10px;
-}
-.station-address {
-    margin-left: 20%;
-}
-.connection-info-icon {
-    position: absolute;
-    right: 10%;
-    top: 2%;
-}
-.mdl-button--icon.consumption-settings-icon {
-    position: absolute;
-    right: 5%;
-    padding-top: 16px;
-}
-.mdl-list__item-avatar.material-icons.operational {
-    background-color: #39dc64;
-}
-.mdl-list__item-avatar.material-icons.slow {
-    background-color: #ffb93a;
-}
-.mdl-list__item-avatar.material-icons.fault {
-    background-color: #ff3a3a;
-}
-.mdl-list__item--three-line {
-    height: auto;
-    box-sizing: unset;
-}
-.mdl-list__item--three-line .mdl-list__item-primary-content {
-    height: auto;
-}
-.charging-info-list {
-    border: 1px solid #ddd;
-    margin: 0;
-}
-.charging-info-list .material-icons.mdl-list__item-icon {
-    float: left;
-}
-.charging-info-list #charginginfo_duration {
-    margin-left: 56px;
-}
-.mdl-layout__drawer {
-    overflow: hidden;
-}
-.navigation-icon {
-    position: absolute;
-    right: 16px;
-}
-.navigation-icon.dashboard {
-    top: 96px;
-}
-.navigation-icon.stations {
-    top: 152px;
-}
-.navigation-icon.settings {
-    top: 208px;
-}
-.navigation-element {
     position: absolute;
     width: 100%;
-    box-sizing: border-box;
-    z-index: 1;
-}
-.navigation-element.dashboard {
-    top: 80px;
-}
-.navigation-element.stations {
-    top: 136px;
-}
-.navigation-element.settings {
-    top: 192px;
-}
-.navigation-version-info {
-    color: #757575;
-    position: absolute;
-    right: 16px;
-    bottom: 0;
-}
-/* Android 4.1 Fixes */
-header.mdl-layout__header.is-casting-shadow,
-.mdl-snackbar.mdl-js-snackbar,
-.mdl-navigation,
-.charging-info-list .mdl-list__item,
-.charging-info-list .mdl-list__item-primary-content,
-.mdl-layout__drawer {
-    display: block;
-}
-.mdl-snackbar.mdl-js-snackbar.mdl-snackbar--active {
-    position: fixed;
-}
-/*Dark Mode (StandBy Mode)*/
-.mdl-layout__content.dark {
-    background-color: #252525;
-}
-.mdl-layout__content.dark .progressbar-text {
-    color: #FFF !important; /* uncool, I know.. */
-}
-.mdl-layout__content.dark .charging-info-list.mdl-list .mdl-list__item .mdl-list__item-primary-content p {
-    color: #FFF;
-}
+    height: 100%;
+    background: rgba(255, 255, 255, 0.9);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
