--- a/www/css/evnotify.css
+++ b/www/css/evnotify.css
@@ -4,8 +4,8 @@
     left: 0;
     right: 0;
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background: rgba(255, 255, 255, 0.9);
     display: flex;
     align-items: center;
