--- a/www/css/evnotify.css
+++ b/www/css/evnotify.css
@@ -10,33 +10,57 @@
     display: flex;
     align-items: center;
     justify-content: center;
-  }
-  .input-field-error {
+    }
+    .input-field-error {
     position: absolute;
     left: 0;
     top: 50px;
     color: red;
-  }
-  .md-toolbar.md-theme-default.md-primary {
+    }
+    .md-toolbar.md-theme-default.md-primary {
     position: fixed;
     z-index: 6;
-  }
-  .md-bottom-bar.md-theme-default.md-type-shift {
+    }
+    .md-bottom-bar.md-theme-default.md-type-shift {
     position: fixed;
     bottom: 0;
     z-index: 5;
-  }
-  .md-snackbar.md-position-center.md-theme-default {
+    }
+    .md-snackbar.md-position-center.md-theme-default {
     bottom: 56px;
-  }
-  .content-within-page {
+    }
+    .content-within-page {
     height: 90%;
     padding: 56px 0 56px 0;
-  }
-  .form.inner-form {
+    }
+    .form.inner-form {
     padding: 0 16px;
-  }
-  .form.inner-form .md-field,
-  .form.inner-form label {
+    }
+    .form.inner-form .md-field,
+    .form.inner-form label {
     padding-left: 16px;
-  }
+    }
+
+
+
+.md-bottom-bar.md-type-shift .md-bottom-bar-item .md-bottom-bar-label{
+  display: none;
+}
+
+.md-bottom-bar.md-type-shift .md-bottom-bar-item.md-active .md-bottom-bar-label{
+  display: block;
+}
+
+.settingicon{
+  margin-right: 15px;
+}
+
+.emptystationicon{
+  height: 100%;
+  -webkit-box-flex: 1;
+  flex: 1;
+  transition: fill .4s cubic-bezier(.4,0,.2,1);
+  width: 100%;
+  vertical-align: top !important;
+}
+
